@@ -1,4 +1,7 @@
 
+  Added message click preference (ANDROID-21)
+  More code cleanup/refactoring.
+
 2010-01-06
   Bumped versionCode for release
   More code cleanup/refactoring.
